--- a/0x03-queuing_system_in_js/package.json
+++ b/0x03-queuing_system_in_js/package.json
@@ -1,50 +1,36 @@
 {
-  "name": "redis",
-  "description": "A modern, high performance Redis client",
-  "version": "4.6.5",
-  "license": "MIT",
-  "main": "./dist/index.js",
-  "types": "./dist/index.d.ts",
-  "files": [
-    "dist/"
-  ],
-  "workspaces": [
-    "./packages/*"
-  ],
+  "name": "queuing_system_in_js",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
   "scripts": {
-    "test": "npm run test -ws --if-present",
-    "build:client": "npm run build -w ./packages/client",
-    "build:test-utils": "npm run build -w ./packages/test-utils",
-    "build:tests-tools": "npm run build:client && npm run build:test-utils",
-    "build:modules": "find ./packages -mindepth 1 -maxdepth 1 -type d ! -name 'client' ! -name 'test-utils' -exec npm run build -w {} \\;",
-    "build": "tsc",
-    "build-all": "npm run build:client && npm run build:test-utils && npm run build:modules && npm run build",
-    "documentation": "npm run documentation -ws --if-present",
-    "gh-pages": "gh-pages -d ./documentation -e ./documentation -u 'documentation-bot <documentation@bot>'"
+    "lint": "./node_modules/.bin/eslint",
+    "check-lint": "lint [0-9]*.js",
+    "test": "./node_modules/.bin/mocha --require @babel/register --exit",
+    "dev": "nodemon --exec babel-node --presets @babel/preset-env"
   },
+  "author": "",
+  "license": "ISC",
   "dependencies": {
-    "@redis/bloom": "1.2.0",
-    "@redis/client": "1.5.6",
-    "@redis/graph": "1.1.0",
-    "@redis/json": "1.0.4",
-    "@redis/search": "1.1.2",
-    "@redis/time-series": "1.0.4"
+    "chai-http": "^4.3.0",
+    "express": "^4.17.1",
+    "kue": "^0.11.6",
+    "redis": "^2.8.0"
   },
   "devDependencies": {
-    "@tsconfig/node14": "^1.0.3",
-    "gh-pages": "^5.0.0",
-    "release-it": "^15.6.0",
-    "typescript": "^4.9.5"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git://github.com/redis/node-redis.git"
-  },
-  "bugs": {
-    "url": "https://github.com/redis/node-redis/issues"
-  },
-  "homepage": "https://github.com/redis/node-redis",
-  "keywords": [
-    "redis"
-  ]
+    "@babel/cli": "^7.8.0",
+    "@babel/core": "^7.8.0",
+    "@babel/node": "^7.8.0",
+    "@babel/preset-env": "^7.8.2",
+    "@babel/register": "^7.8.0",
+    "eslint": "^6.4.0",
+    "eslint-config-airbnb-base": "^14.0.0",
+    "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-jest": "^22.17.0",
+    "nodemon": "^2.0.2",
+    "chai": "^4.2.0",
+    "mocha": "^6.2.2",
+    "request": "^2.88.0",
+    "sinon": "^7.5.0"
+  }
 }
