--- a/0x03-queuing_system_in_js/package.json
+++ b/0x03-queuing_system_in_js/package.json
@@ -4,7 +4,10 @@
   "description": "0x03. Queuing System in JS Back-end JavaScript ES6 Redis NodeJS ExpressJS Kue",
   "main": "0-redis_client.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "lint": "./node_modules/.bin/eslint",
+    "check-lint": "lint [0-9]*.js",
+    "test": "./node_modules/.bin/mocha --require @babel/register --exit",
+    "dev": "nodemon --exec babel-node --presets @babel/preset-env"
   },
   "keywords": [],
   "author": "",
