--- a/0x03-queuing_system_in_js/package.json
+++ b/0x03-queuing_system_in_js/package.json
@@ -1,27 +1,21 @@
 {
   "name": "0x03-queuing_system_in_js",
   "version": "1.0.0",
-  "description": "0x03. Queuing System in JS Back-end JavaScript ES6 Redis NodeJS ExpressJS Kue",
-  "main": "0-redis_client.js",
+  "description": "",
+  "main": "index.js",
   "scripts": {
     "lint": "./node_modules/.bin/eslint",
     "check-lint": "lint [0-9]*.js",
     "test": "./node_modules/.bin/mocha --require @babel/register --exit",
     "dev": "nodemon --exec babel-node --presets @babel/preset-env"
   },
-  "babel": {
-    "presets": [
-      "@babel/preset-env"
-    ]
-  },
-  "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "axios": "^1.3.4",
-    "babel-cli": "^6.26.0",
-    "express": "^4.18.2",
-    "redis": "^4.6.5"
+    "chai-http": "^4.3.0",
+    "express": "^4.17.1",
+    "kue": "^0.11.6",
+    "redis": "^2.8.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.8.0",
@@ -29,6 +23,14 @@
     "@babel/node": "^7.8.0",
     "@babel/preset-env": "^7.8.2",
     "@babel/register": "^7.8.0",
-    "nodemon": "^2.0.21"
+    "eslint": "^6.4.0",
+    "eslint-config-airbnb-base": "^14.0.0",
+    "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-jest": "^22.17.0",
+    "nodemon": "^2.0.2",
+    "chai": "^4.2.0",
+    "mocha": "^6.2.2",
+    "request": "^2.88.0",
+    "sinon": "^7.5.0"
   }
 }
